--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
     background-color: darkcyan;
 }
 
+img {
+    width: 40px;
+    padding: 5px;
+}
+
 .bg-botton {
     width: 100vw;
     height: 80vh;
@@ -18,6 +23,18 @@ section {
     z-index: 54343;
 }
 
+div.bg-info i.fas {
+    font-size: 30px;
+    color: aqua;
+    border-radius: 50%;
+}
+
 .fas {
     color: grey;
+    padding: 0 6px;
+}
+
+span.text-decoration-underline {
+    font-size: 14px;
+    color: gray;
 }
